Some Files Added

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div class="line"></div>
 
     <!-- Banners -->
-    <div id="hero" class="hrtxt hero-banner position-relative">
+     <div id="hero" class="hrtxt hero-banner position-relative">
         <header class="text-center w-100"
             style="position:absolute; left:50%; bottom:0; transform:translateX(-50%); z-index:2;">
             <h1 class="about-title"><span>Asphalt Velocity</span></h1>
@@ -85,12 +85,12 @@
             <video src="Assets/BMW.mp4" class="slide active" loop muted autoplay playsinline></video>
         </div>
         <button class="arrow right" style="z-index:3;">&gt;</button>
-    </div>
-
+    </div> 
+ 
     <!-- Cards -->
     <section id="products" class="border-animate">
         <div class="container">
-            <h4 id="cd" class="allbrands">--- << ALL BRANDS>> ---</h4>
+            <h4 id="cd" class="allbrands">--- << ALL BRANDS >> ---</h4>
             <div class="row">
                 <div class="col-lg-3 col-md-4 col-12">
                     <div class="card" style="width: 18rem;">
@@ -383,6 +383,8 @@
     </section>
 
     <div class=" line"></div>
+
+    <!-- Thanks -->
     <div id="end" class="end-section">
         <h4 class="allbrands"> --- THANK YOU FOR VISITING! --- </h4>
         <blockquote>We appreciate your time and interest in Asphalt Velocity. Drive safe and stay passionate about cars!
